# autonomous-investor

./: .env.example  .gitignore  PROJECT_CHARTER.md  README.md  conftest.py  docker-compose.yml  pyproject.toml
agents/monolithic/: agent.py  context.py  system_prompt.py
agents/monolithic/tools/: catalog.py
config/: macro_series.toml  models.toml  risk_gateway.toml  universe.toml
config/dag/: macro.yaml
instrumentation/: dag.py  journal.py  schema.py  store.py  test_store.py
instrumentation/viewer/: cli.py
migrations/: 0001_bitemporal_schema.sql
scripts/: backfill_macro.py  backfill_prices.py  daily_run.py  run_migrations.py
substrate/: config.py  test_config.py
substrate/backtest/: harness.py
substrate/bitemporal/: query.py  test_query.py
substrate/ingest/: macro.py  prices.py
substrate/risk_gateway/: gateway.py  test_gateway.py  types.py
tests/: test_backtest_as_of.py
